--- a/movies-review-service/src/main/resources/application.properties
+++ b/movies-review-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8081
-#spring.mongodb.embedded.version=3.5.5
+spring.mongodb.embedded.version=3.5.5
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=local
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=local
 
 
 #spring:
